profilelist1exp/unpackaged/objects/GDM_Request__c.object
<CustomObject>
    <fields>
        <fullName>List_of_teammates_with_same_access_right__c</fullName>
        <description>Used in Get Access To Tools request</description>
        <inlineHelpText>Use only if &quot;Update SFDC Access&quot; is selected</inlineHelpText>
        <label>List of teammates with same access right</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Account_Name__c</fullName>
        <label>Local Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Badge__c</fullName>
        <label>Manager Badge</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Rep_Name__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Request_Status__c</fullName>
        <label>New Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approver(s) Approved</fullName>
                </value>
                <value>
                    <fullName>Approver(s) Rejected</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>DS Review</fullName>
                </value>
                <value>
                    <fullName>GDM Review</fullName>
                </value>
                <value>
                    <fullName>Hold IT (Trouble Ticket)</fullName>
                </value>
                <value>
                    <fullName>Hold - Missing Info</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Next Fiscal Period/Cycle</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected Hold - Missing Info</fullName>
                </value>
                <value>
                    <fullName>Rejected Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Requestor Response</fullName>
                </value>
                <value>
                    <fullName>SFDC Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Role__c</fullName>
        <label>New Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status_Desired__c</fullName>
        <description>this allows for mass update potentially</description>
        <label>New Status Desired</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>&apos;Buddy Access can only be provided for a maximum time frame of 3 weeks&apos; &amp; BR() &amp; &apos;The Buddy and Rep on Leave need to report to the same Manager&apos;</defaultValue>
        <description>This field is available on the Buddy Access request</description>
        <label>Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Objects__c</fullName>
        <description>Active If DLR (SFDC Update request)</description>
        <label>Number of Objects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_To_Load__c</fullName>
        <description>If DLR then pick from this</description>
        <label>Object To Load</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Request__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Play</fullName>
                </value>
                <value>
                    <fullName>Campaign Member &amp; Relationship Lead</fullName>
                </value>
                <value>
                    <fullName>Channel Lead</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Non-Integrated User</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>Opportunity Team Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PRM User</fullName>
                </value>
                <value>
                    <fullName>Relationship Lead</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <description>Account Team Member history for Opportunity Access Level</description>
        <label>OpportunityAccessLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access_To_Buddy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used For getting opportunity access to Buddy or not.</description>
        <label>Opportunity Access To Buddy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID__c</fullName>
        <label>Parent Account ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>Used for Get Access To Tools</description>
        <inlineHelpText>Use only if &quot;Update SFDC Access&quot; is selected</inlineHelpText>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROL_Manager_Name__c</fullName>
        <formula>ROL_Manager__r.FirstName + &apos; &apos; + ROL_Manager__r.LastName</formula>
        <label>ROL Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROL_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ROL Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_RequestsE9NC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Requested__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <label>Reason Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sickness</fullName>
                </value>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Multi-day training</fullName>
                </value>
                <value>
                    <fullName>Multi-day customer event</fullName>
                </value>
                <value>
                    <fullName>Multi-day Dell event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06 Replaced-101</fullName>
                </value>
                <value>
                    <fullName>07-Duplicated-101</fullName>
                </value>
                <value>
                    <fullName>08-Merger-101</fullName>
                </value>
                <value>
                    <fullName>08-Out of Business-101</fullName>
                </value>
                <value>
                    <fullName>84-Suppress reporting on Global Account-101</fullName>
                </value>
                <value>
                    <fullName>796-Account / sub-account of business</fullName>
                </value>
                <value>
                    <fullName>35-Customer Owned-108</fullName>
                </value>
                <value>
                    <fullName>36-Linkage Fix-108</fullName>
                </value>
                <value>
                    <fullName>37-Not Customer Owned-109</fullName>
                </value>
                <value>
                    <fullName>38-Internal Realignment-110</fullName>
                </value>
                <value>
                    <fullName>39-Linkage Fix-110</fullName>
                </value>
                <value>
                    <fullName>879-People Movement-Changing role within Dell</fullName>
                </value>
                <value>
                    <fullName>880-People Movement-Leaving Dell</fullName>
                </value>
                <value>
                    <fullName>881-Within Segment-Dell reorganized account(s)</fullName>
                </value>
                <value>
                    <fullName>882-Cross Segment - Account moved segments</fullName>
                </value>
                <value>
                    <fullName>883-Customer Driven-Geo/structure Change</fullName>
                </value>
                <value>
                    <fullName>884-Customer Driven-Satisfaction Issue</fullName>
                </value>
                <value>
                    <fullName>885-Data Correction</fullName>
                </value>
                <value>
                    <fullName>13-Information Change-103</fullName>
                </value>
                <value>
                    <fullName>14-Reformatting Change-103</fullName>
                </value>
                <value>
                    <fullName>15-Typo Correction-103</fullName>
                </value>
                <value>
                    <fullName>16-Other Correction-103</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasoning__c</fullName>
        <description>almost same as comment</description>
        <label>Reasoning</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMER</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Account_Access_Level__c</fullName>
        <label>Rep Account Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Buddy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Rep who will be the &apos;buddy&apos;. Both Reps must have the same Manager and the Rep obtaining a buddy cannot have a buddy request that is currently open.</inlineHelpText>
        <label>Rep Buddy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Case_Access_Level__c</fullName>
        <label>Rep Case Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Opportunity_Access_Level__c</fullName>
        <label>Rep Opportunity Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_on_Leave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>The Rep for which Buddy Access is requested</inlineHelpText>
        <label>Rep on Leave</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <description>tbd</description>
        <label>Request_Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tbd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Detail_ID__c</fullName>
        <description>detail ID of the request</description>
        <label>Request Detail ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Source__c</fullName>
        <label>Request Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC-Force</fullName>
                    <default>true</default>
                    <label>SFDC-Force</label>
                </value>
                <value>
                    <fullName>ACQ-Quest</fullName>
                </value>
                <value>
                    <fullName>ACQ-DSG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status_Date__c</fullName>
        <label>Request Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>The next Request Status value is dependent on the current Request Status</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approver(s) Approved</fullName>
                </value>
                <value>
                    <fullName>Approver(s) Rejected</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>DS Review</fullName>
                </value>
                <value>
                    <fullName>GDM Review</fullName>
                </value>
                <value>
                    <fullName>Hold IT (Trouble Ticket)</fullName>
                </value>
                <value>
                    <fullName>Hold - Missing Info</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Next Fiscal Period/Cycle</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected Hold - Missing Info</fullName>
                </value>
                <value>
                    <fullName>Rejected Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Requestor Response</fullName>
                </value>
                <value>
                    <fullName>SFDC Issue</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <description>Type of request</description>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By_Text__c</fullName>
        <defaultValue>$User.FirstName  + &apos; &apos; + $User.LastName</defaultValue>
        <label>Requested By User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who asked for the request.</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date Time Stamp</description>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor_Comments__c</fullName>
        <description>Comments by the requestor</description>
        <label>Requestor Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_Mgr_Team_Name__c</fullName>
        <description>People Changes</description>
        <label>Resource Mgr Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDS_Comments__c</fullName>
        <description>Comments by SDS (DPT)</description>
        <label>SDS Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Sales_Channel_Group__c.Regional_Sub_Parent_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Channel_Group__c</referenceTo>
        <relationshipLabel>GDM Requests (Territory)</relationshipLabel>
        <relationshipName>GDM_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_to_Services_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will send the request for approval to the Services Queue</inlineHelpText>
        <label>Services Approver Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_With_DPT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is to allow records created to be shared with DPTteam</description>
        <label>Share With DPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Used for Create Account and Update Account request</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State or Province (if US, use 2 character State Code)</description>
        <label>State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggestion_ID__c</fullName>
        <description>Suggestion ID from Affinity</description>
        <label>Suggestion ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>required field if Action is &apos;Reassign&apos; in Customer Linkage</description>
        <inlineHelpText>This field is required if Action is &apos;110-Reassign&apos;</inlineHelpText>
        <label>Target Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GDM Requests (Target Account)</relationshipLabel>
        <relationshipName>GDM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMemberRole__c</fullName>
        <description>Account Team Member history for Team Member Role</description>
        <label>TeamMemberRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <description>Account Territory ID</description>
        <label>Territory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the request</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tool_List__c</fullName>
        <label>Tool List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAMA</fullName>
                </value>
                <value>
                    <fullName>Update SFDC Access</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Bulk_Request__c</fullName>
        <description>The type of request the user is requesting in bulk.</description>
        <inlineHelpText>The type of request the user is requesting in bulk.</inlineHelpText>
        <label>Type of Bulk Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add To Customer To Account</fullName>
                </value>
                <value>
                    <fullName>Change Ownership</fullName>
                </value>
                <value>
                    <fullName>Create Account / Reactivate</fullName>
                </value>
                <value>
                    <fullName>Deactivate Account</fullName>
                </value>
                <value>
                    <fullName>Get Access to Tools</fullName>
                </value>
                <value>
                    <fullName>Org Changes</fullName>
                </value>
                <value>
                    <fullName>SFDC Update</fullName>
                </value>
                <value>
                    <fullName>Update Account</fullName>
                </value>
                <value>
                    <fullName>Team Matrix</fullName>
                </value>
                <value>
                    <fullName>Cross Segment – Next Quarter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <description>Type of SFDC Request</description>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-board</fullName>
                </value>
                <value>
                    <fullName>Off-board</fullName>
                </value>
                <value>
                    <fullName>Role Change</fullName>
                </value>
                <value>
                    <fullName>Group Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>DLR</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Type__c</fullName>
        <description>Type of update. Create, Change Status. This is an internal record indicator determining what type of change was done. This then determine the action to do,</description>
        <label>Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Status change</fullName>
                </value>
                <value>
                    <fullName>DS Change Status</fullName>
                </value>
                <value>
                    <fullName>DS Review Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>GDM Request</label>
    <listViews>
        <fullName>ALL_CASES_ASSIGNED_ME</fullName>
        <columns>NAME</columns>
        <columns>Requested_Date__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_1_Response__c</columns>
        <columns>Requested_By_Text__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Type_of_Bulk_Request__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <columns>Badge_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>LATAM</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approver(s) Approved,Assigned,DS Review,Open</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Roger Selister</value>
        </filters>
        <label>_ALL CASES ASSIGNED ME</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_CASES_ASSIGNED_ROGER_NEW</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Requested_By_Text__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Type_of_Bulk_Request__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Country__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>LATAM</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Create Account / Reactivate</value>
        </filters>
        <filters>
            <field>Type_of_Bulk_Request__c</field>
            <operation>notEqual</operation>
            <value>Create Account / Reactivate</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Gloria Moreno</value>
        </filters>
        <label>_ALL CASES GLORIA ASSIGNED</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Requests1</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Status_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Requested_Date__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Open,Pending Approval,Hold - Missing Info,Assigned</value>
        </filters>
        <label>Active Requests Country</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Requests2</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Account_Owner_Badge__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Status_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Requested_Date__c</columns>
        <columns>Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_Badge__c</field>
            <operation>equals</operation>
            <value>999999</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>contains</operation>
            <value>Open,Pending Approval,Hold - Missing Info,Assigned</value>
        </filters>
        <label>Active Requests-999999</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Title__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Status_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>